# Auto-fixer-poc

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  README.md  docker-compose.yml  orchestrator_workflow.excalidraw  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
src/: main.py
src/agents/: auto_fixer.py  base.py  error_analyzer.py  fix_suggester.py  orchestrator.py  reporter.py  research_agent.py
src/api/: events.py
src/config/: settings.py
src/indexer/: chunker.py  indexer.py
src/llm/: fallback.py  router.py
src/observability/: langfuse_setup.py
src/tools/: base.py  code_executor.py  codebase.py  file_editor.py  git_tools.py  notifier.py  sandbox_test.py  web_search.py
tests/e2e/: test_pipeline.py
